card alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,8 +85,7 @@ h1{font-weight:500}
 #home-slider h1.slider-text{font-size:50px;margin:15px 0}
 #home-slider p{margin:5px 0;width:75%;color:#bbb7b7;font-size:13px;}
 #home-slider .container-fluid.position-relative.h-100{background: linear-gradient(1deg, rgb(0, 0, 0) 0%, transparent 0%), linear-gradient(90deg, rgb(24, 24, 24) 25%, transparent 50%);}
-
-
+.movie-time{margin: 0 !important;}
 #home-slider .s-bg-1{width:100%;background-size:contain!important; background-position: right !important;background-repeat:no-repeat !important;position:relative;z-index:1}
 .s-bg-1{width:100%;background-size:contain;background-position:center center;background-repeat:no-repeat;position:relative;z-index:1}
 .trailor-video{bottom:75px!important;right:0;z-index:999}
